# hotsq

./: Cargo.toml  README.md  build.rs
src/: error.rs  game.rs  group.in.rs  group.rs  hero.in.rs  hero.rs  lib.rs  main.rs  matchmaker.rs  mode.in.rs  mode.rs  plan.in.rs  plan.rs  player.in.rs  player.rs  queue.rs  results.rs
tests/: plan_test.rs
